# TextArena

./: .env copy  .env copy 2  .env copy 3  .env copy 4  .gitignore  =1.12  =10.10.0  ENHANCEMENTS.md  MANIFEST.in  README.md  README_analyze_leaderboards.md  TODO.md  a.py  a_sft_llama.py  analyze_leaderboards.py  codenamesmain.py  collect_sft_data.py.py  config.py  debug.py  demo_results_detailed_results.csv  demo_results_performance_stats.csv  demo_results_ranking_stats.csv  evaluation.py  example.py  example_usage.py  game_todo.md  hanabi_env.py  leaderboard_analysis_detailed_results.csv  leaderboard_analysis_performance_stats.csv  leaderboard_analysis_ranking_stats.csv  library_docs.md  model_configs.py  offline_play_example.py  online_play_example-1.py  online_play_example-2.py  online_play_example-3.py  online_play_example-4.py  online_play_example-5.py  online_play_example-6.py  online_play_example-7.py  (+77 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  questions.yml
.github/workflows/: generate_docs_test.yml
agents/: README.md
connect4_20241122_155000/: adapter_config.json
connect4_20241122_160901/: README.md  adapter_config.json
eval/: single_player.py  single_player_leaderboard.md  two_player.py  two_player_leaderboard.md
eval_results/: eval_summary.csv
examples/: agent_vs_gpt4omini.py  offline_evaluation.py  offline_multiplayer_eval.ipynb  offline_play.py  online_play.py  online_play_mindgameschallenge.py
frontend/: app.js  index.html  styles.css
game_logs/run_20250830_153916_SimpleNegotiation-v0_2games_CHEAP_MODELS_TEST_basic/: game_0001_SimpleNegotiation-v0_qwen3-235b-a22b-2507_vs_gemini-2.5-flash_basic.json  game_0002_SimpleNegotiation-v0_gemini-2.5-flash_vs_llama-4-maverick_basic.json  game_0003_SimpleNegotiation-v0_qwen3-235b-a22b-2507_vs_llama-4-maverick_basic.json  game_0004_SimpleNegotiation-v0_gemini-2.5-flash_vs_llama-4-maverick_basic.json  game_0005_SimpleNegotiation-v0_qwen3-235b-a22b-2507_vs_gemini-2.5-flash_basic.json  game_0006_SimpleNegotiation-v0_qwen3-235b-a22b-2507_vs_llama-4-maverick_basic.json
game_logs/run_20250830_154326_SimpleNegotiation-v0_2games_CHEAP_MODELS_TEST_basic/: game_0001_SimpleNegotiation-v0_qwen3-235b-a22b-2507_vs_gemini-2.5-flash_basic.json  game_0002_SimpleNegotiation-v0_gemini-2.5-flash_vs_qwen3-235b-a22b-2507_basic.json  game_0003_SimpleNegotiation-v0_llama-4-maverick_vs_gemini-2.5-flash_basic.json  game_0004_SimpleNegotiation-v0_llama-4-maverick_vs_gemini-2.5-flash_basic.json  game_0005_SimpleNegotiation-v0_qwen3-235b-a22b-2507_vs_llama-4-maverick_basic.json  game_0006_SimpleNegotiation-v0_qwen3-235b-a22b-2507_vs_llama-4-maverick_basic.json
samples/: babyai_text_demo.py  mcp_demo.ipynb
textarena/: README.md  __init__.py  advanced_agents.py  agent_interface.py  agents.py  api.py  basic_agents.py  buggy_api.py  core.py  good_working_api.py  state.py  utils.py
utils/: draw.py
(+10255 files in other folders)
