[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TextArena"
version = "0.6.4"
description = "A Collection of Competitive Text-Based Games for Language Model Evaluation and Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name="Leon Guertler", email="Guertlerlo@cfar.a-star.edu.sg" },
]
dependencies = [
    "requests",
    "openai",
    "rich",
    "nltk",
    "chess",
    "networkx",
    "python-dotenv",
    "websockets",
]

[project.urls]
"Homepage" = "https://github.com/LeonGuertler/TextArena"