[metadata]
name = textarena
version = 0.1.0
description = Competitive text-based games for language model evaluation and reinforcement learning.
author = Leon Guertler
author_email = guertlerlo@cfar.a-star.edu.sg
url = https://github.com/yourusername/textarena
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    openai>=0.11.0
    tqdm>=4.60.0
python_requires = >=3.11

[options.packages.find]
exclude =
    tests
    examples

[options.entry_points]
console_scripts =
    textarena = textarena.cli:main
